audi_ws/log/build_2025-04-19_19-30-42/racecar_controller/stderr.log
  File "/home/dliujm/um_files/rob_498_av/AutoVehicle25/audi_ws/install/racecar_controller/lib/python3.10/site-packages/simulation_files/longtitudinal.py", line 14
    if 
       ^
SyntaxError: invalid syntax

